--- a/accueil.html
+++ b/accueil.html
@@ -264,7 +264,7 @@
                     item.classList.add("autocomplete-item");
 
                     var image = document.createElement("img");
-                    image.src = "images_animes/" + anime.image;
+                    image.src = "images_Animes/" + anime.image;
                     image.alt = "Image de " + anime.name;
 
                     var animeInfo = document.createElement("div");
