--- a/liste_animes.html
+++ b/liste_animes.html
@@ -207,7 +207,7 @@
                         link.href = anime.name.toLowerCase().replace(/\s+/g, '-') + ".html";
                         var image = document.createElement("img");
                         image.classList.add("anime-image");
-                        image.src = "images_animes/" + anime.image;
+                        image.src = "images_Animes/" + anime.image;
                         image.alt = "Image de " + anime.name;
                         var info = document.createElement("span");
                         info.classList.add("anime-info");
