--- a/king's-game.html
+++ b/king's-game.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>King's Game</h2>
-        <img src="images_Animes/KING'S GAME.JPG" alt="Image de l'anime">
+        <img src="images_animes/KING'S GAME.JPG" alt="Image de l'anime">
         <div class="info-box">
             <div class="rating">
                 1.325/10
