--- a/accueil.html
+++ b/accueil.html
@@ -243,7 +243,7 @@
     },
     {
         "name": "King's Game",
-        "image": "KING'S GAME.jpg",
+        "image": "KINGS GAME.jpg",
         "rating": "1.325",
         "genre": "Drame, Horreur, Myst\u00e8re"
     }
