--- a/liste_animes.html
+++ b/liste_animes.html
@@ -165,7 +165,7 @@
             },
             {
                 "name": "King's Game",
-                "image": "KING'S GAME.jpg",
+                "image": "KINGS GAME.jpg",
                 "rating": "1.325",
                 "genre": "Drame, Horreur, Mystère"
             }
@@ -200,7 +200,7 @@
                         link.href = anime.name.toLowerCase().replace(/\s+/g, '-') + ".html";
                         var image = document.createElement("img");
                         image.classList.add("anime-image");
-                        image.src = "images_animes/" + anime.image;
+                        image.src = "images_Animes/" + anime.image;
                         image.alt = "Image de " + anime.name;
                         var info = document.createElement("span");
                         info.classList.add("anime-info");
