--- a/king's-game.html
+++ b/king's-game.html
@@ -23,7 +23,7 @@
         </div>
         <div class="review-box">
             <p class="title">Critique de l'anime</p>
-            <p>L'anime est gore pour rien, les seuls personnages intéréssants meurent après 5 minutes, ça va dans tous les sens, les personnages principaux sont tous chiants, difficile de trouver un bon point à cet anime qui semble avoir été imaginé par un gosse de 5 ans... rien n'est expliqué, le dévellopement est à cher, la fin est baclée et mauvaise comme tout l'anime qui ne propose rien de bien, une grosse perte de temps.</p>
+            <p>L'anime est gore pour rien, les seuls personnages intéréssants meurent après 5 minutes, ça va dans tous les sens, les personnages principaux sont tous chiants, difficile de trouver un bon point à cet anime qui semble avoir été imaginé par un gosse de 5 ans... rien n'est expliqué, le développement est à cher, la fin est baclée et mauvaise comme tout l'anime qui ne propose rien de bien, une grosse perte de temps.</p>
             <p class="title">Synopsis</p>
             <p>L'histoire se centre sur une classe entière de 32 lycéens qui reçoivent un étrange message venant d'une personne se faisant appeler le "roi". Le message contient des ordres que les lycéens doivent accomplir sous peine de mourir. Au fur et à mesure que les jours passent, les ordres du "roi" deviennent de plus en plus extrêmes...</p>
         </div>
