--- a/liste_animes.html
+++ b/liste_animes.html
@@ -111,7 +111,7 @@
             color: #ffa500;
             border: 2px solid #b1aa9c;
             box-shadow: 0 0 10px #b1aa9c;
-            box-sizing: border-box;
+            box-sizing: border-box; /**/
         }
 
         .bold {
