--- a/accueil.html
+++ b/accueil.html
@@ -165,6 +165,53 @@
             font-weight: bold;
         }
 
+                /* Pour les écrans de petite taille comme   les téléphones */
+        @media only screen and (max-width: 768px) {
+            .container {
+                width: 100%;
+                padding-top: 20px; /* Ajustement de l'espace en haut */
+            }
+            .header {
+                margin-bottom: 30px; /* Ajustement de la marge du titre */
+            }
+            h1 {
+                font-size: 36px; /* Ajustement de la taille de la police du titre */
+            }
+            .logo {
+                width: 100px; /* Ajustement de la taille du logo */
+                margin-bottom: 10px; /* Ajustement de la marge du logo */
+            }
+            p {
+                font-size: 18px; /* Ajustement de la taille de la police du paragraphe */
+                margin-bottom: 10px; /* Ajustement de la marge du paragraphe */
+            }
+            input[type="text"] {
+                padding: 10px; /* Ajustement du rembourrage du champ de texte */
+            }
+            input[type="submit"],
+            .button {
+                padding: 12px 0; /* Ajustement du rembourrage du bouton */
+                margin-top: 10px; /* Ajustement de la marge du bouton */
+            }
+        }
+
+        /* Pour les écrans de taille moyenne comme les tablettes */
+        @media only screen and (min-width: 769px) and (max-width: 1024px) {
+            .container {
+                width: 80%;
+                padding-top: 30px;
+            }
+        }
+
+        /* Pour les écrans de grande taille comme les ordinateurs de bureau */
+        @media only screen and (min-width: 1025px) {
+            .container {
+                width: 70%;
+                padding-top: 50px;
+            }
+        }
+
+
         @media only screen and (max-width: 768px) {
             .container {
                 width: 100%;
@@ -232,7 +279,7 @@
     {
         "name": "Orange",
         "image": "ORANGE.jpg",
-        "rating": "8.9",
+        "rating": "8.6",
         "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
     },
     {
