--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         }
 
         .container {
-            width: 80%;
-            margin: 0 auto;
+            width: 90%; /* Réduire un peu la largeur */
+            margin: 0 auto; /* Centrer la container horizontalement */
             padding-top: 50px;
+            padding: 20px; /* Ajustement du rembourrage */
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Centrer verticalement le contenu */
         }
-
         .header {
             text-align: center;
             margin-bottom: 50px;
