--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Critiques d'animes</title>
     <style>
         body {
@@ -168,7 +167,6 @@
             padding-left: 10px;
             font-weight: bold;
         }
-
 /* Pour les écrans de petite taille comme les téléphones */
 @media only screen and (max-width: 768px) {
     .container {
@@ -187,7 +185,7 @@
         margin-bottom: 10px; /* Ajustement de la marge du logo */
     }
     p {
-        font-size: 16px; /* Ajustement de la taille de la police du paragraphe */
+        font-size: 14px; /* Ajustement de la taille de la police du paragraphe */
         margin-bottom: 10px; /* Ajustement de la marge du paragraphe */
     }
     input[type="text"] {
@@ -196,11 +194,12 @@
     }
     input[type="submit"],
     .button {
-        padding: 12px 0; /* Ajustement du rembourrage du bouton */
+        padding: 10px ; /* Ajustement du rembourrage du bouton */
         margin-top: 10px; /* Ajustement de la marge du bouton */
         font-size: 14px; /* Ajustement de la taille de la police du bouton */
     }
 }
+
 
 /* Pour les écrans de taille moyenne comme les tablettes */
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
