--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 /* Pour les écrans de petite taille comme les téléphones */
 @media only screen and (max-width: 768px) {
     .container {
-        width: 80%;
-        padding-top: 20px; /* Ajustement de l'espace en haut */
+        width: 90%; /* Par exemple, vous pouvez ajuster cette valeur selon vos besoins */
+        margin: 0 auto; /* Centrer horizontalement la container */
         padding: 20px; /* Ajustement du rembourrage */
     }
     .header {
@@ -185,7 +185,7 @@
         margin-bottom: 10px; /* Ajustement de la marge du logo */
     }
     p {
-        font-size: 14 px; /* Ajustement de la taille de la police du paragraphe */
+        font-size: 16px; /* Ajustement de la taille de la police du paragraphe */
         margin-bottom: 10px; /* Ajustement de la marge du paragraphe */
     }
     input[type="text"] {
@@ -194,11 +194,12 @@
     }
     input[type="submit"],
     .button {
-        padding: 10px ; /* Ajustement du rembourrage du bouton */
+        padding: 12px 0; /* Ajustement du rembourrage du bouton */
         margin-top: 10px; /* Ajustement de la marge du bouton */
         font-size: 14px; /* Ajustement de la taille de la police du bouton */
     }
 }
+
 
 
 /* Pour les écrans de taille moyenne comme les tablettes */
