--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Critiques d'animes</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,13 +16,13 @@
         }
 
         .container {
-            width: 90%; /* Réduire un peu la largeur */
-            margin: 0 auto; /* Centrer la container horizontalement */
+            width: 90%; 
+            margin: 0 auto;
             padding-top: 50px;
-            padding: 20px; /* Ajustement du rembourrage */
+            padding: 20px; 
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Centrer verticalement le contenu */
+            justify-content: center; 
         }
         .header {
             text-align: center;
@@ -167,10 +168,9 @@
             padding-left: 10px;
             font-weight: bold;
         }
-/* Pour les écrans de petite taille comme les téléphones */
 @media only screen and (max-width: 768px) {
     body {
-        overflow-x: hidden; /* Empêcher le défilement horizontal */
+        overflow-x: hidden;
     }
     html, body {
         width: 100%;
@@ -180,73 +180,70 @@
     }
     .container {
         width: 100%;
-        max-width: 600px; /* Par exemple, vous pouvez ajuster cette valeur selon vos besoins */
-        margin: 0 auto; /* Centrer horizontalement la container */
-        padding: 20px; /* Ajustement du rembourrage */
+        max-width: 600px; 
+        margin: 0 auto; 
+        padding: 20px; 
     }
     .header {
-        margin-bottom: 30px; /* Ajustement de la marge du titre */
+        margin-bottom: 30px;
     }
     h1 {
-        font-size: 36px; /* Ajustement de la taille de la police du titre */
+        font-size: 36px;
     }
     .logo {
-        width: 80px; /* Ajustement de la taille du logo */
-        margin-bottom: 10px; /* Ajustement de la marge du logo */
+        width: 80px; 
+        margin-bottom: 10px;
     }
     p {
-        font-size: 16px; /* Ajustement de la taille de la police du paragraphe */
-        margin-bottom: 10px; /* Ajustement de la marge du paragraphe */
+        font-size: 16px; 
+        margin-bottom: 10px;
     }
     input[type="text"] {
-        padding: 10px; /* Ajustement du rembourrage du champ de texte */
-        font-size: 14px; /* Ajustement de la taille de la police du champ de texte */
+        padding: 10px; 
+        font-size: 14px; 
     }
     input[type="submit"],
     .button {
-        padding: 12px 0; /* Ajustement du rembourrage du bouton */
-        margin-top: 10px; /* Ajustement de la marge du bouton */
-        font-size: 14px; /* Ajustement de la taille de la police du bouton */
+        padding: 12px 0; 
+        margin-top: 10px; 
+        font-size: 14px; 
     }
 }
 
 
 
-/* Pour les écrans de taille moyenne comme les tablettes */
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
     .container {
-        width: 90%; /* Réduire un peu la largeur */
+        width: 90%; 
         padding-top: 30px;
     }
     .header {
-        margin-bottom: 40px; /* Ajustement de la marge du titre */
+        margin-bottom: 40px; 
     }
     h1 {
-        font-size: 42px; /* Ajustement de la taille de la police du titre */
+        font-size: 42px; 
     }
     p {
-        font-size: 18px; /* Ajustement de la taille de la police du paragraphe */
-        margin-bottom: 15px; /* Ajustement de la marge du paragraphe */
+        font-size: 18px;
+        margin-bottom: 15px; 
     }
     .logo {
-        width: 100px; /* Ajustement de la taille du logo */
-        margin-bottom: 15px; /* Ajustement de la marge du logo */
+        width: 100px; 
+        margin-bottom: 15px; 
     }
     input[type="text"] {
-        padding: 12px; /* Ajustement du rembourrage du champ de texte */
-        font-size: 14px; /* Ajustement de la taille de la police du champ de texte */
+        padding: 12px; 
+        font-size: 14px;
     }
     input[type="submit"],
     .button {
-        padding: 12px 0; /* Ajustement du rembourrage du bouton */
-        margin-top: 15px; /* Ajustement de la marge du bouton */
-        font-size: 14px; /* Ajustement de la taille de la police du bouton */
+        padding: 12px 0; 
+        margin-top: 15px;
+        font-size: 14px; 
     }
 }
 
 
-
-        /* Pour les écrans de grande taille comme les ordinateurs de bureau */
         @media only screen and (min-width: 1025px) {
             .container {
                 width: 70%;
