--- a/fireworks.html
+++ b/fireworks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="anime.css">
+    <link rel="icon" type="image/png" href="logo.png">
     <title>Fireworks, Should We See It from the Side or the Bottom?
     </title>
 </head>
