--- a/paranoia-agent.html
+++ b/paranoia-agent.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="anime.css">
     <title>Paranoia Agent</title>
+    <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
     <div class="container">
