--- a/pagecachee.html
+++ b/pagecachee.html
@@ -48,7 +48,7 @@
             font-size: 32px;
             color: #00ff00;
         }
-        /* Pour les écrans de petite taille comme les téléphones */
+        /* Pour les écrans de petite taille comhme les téléphones */
 @media only screen and (max-width: 768px) {
     .container {
         width: 100%;
