--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         .autocomplete {
             position: relative;
-            width: 80%;
+            width: 75%;
             margin: 0% 10% 120px 10%;
         }
 
@@ -182,6 +182,14 @@
 
             .logo {
                 width: 80px;
+            }
+            
+            .rating, .genre {
+                font-size: 14px;
+            }
+
+            .anime-title {
+                font-size: 18px;
             }
         }
 
