--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         .autocomplete-item img {
             background-color: cyan;
-            width: 80px;
+            width: 120px;
             height: auto;
             border-radius: 5px;
         }
@@ -183,9 +183,9 @@
             .logo {
                 width: 80px;
             }
-            
             .rating, .genre {
                 font-size: 14px;
+                text-align: center;
             }
 
             .anime-title {
