--- a/happy-sugar-life.html
+++ b/happy-sugar-life.html
@@ -24,7 +24,7 @@
         </div>
         <div class="review-box">
             <p class="title">Critique de l'anime</p>
-            <p>L'anime est très inquiétant au début, j'ai eu peur d'où allait l'anime, les personnages étaient plus que bizarre. cependant il est très intéréssant, peu prévisible, il y a une vraie ambiance, des personnages plus détéstables que d'autres mais aucun n'est inutile,  et le développement est bien également.</p>
+            <p>L'anime est très inquiétant au début, j'ai eu peur d'où allait l'anime, les personnages étaient plus que bizarre. cependant il est très intéréssant, peu prévisible, il y a une vraie ambiance, des personnages plus détéstables que d'autres mais aucun n'est inutile,  et le développement est bien également. L'anime est pas parfait mais j'ai passé un très bon moment à le regarder.</p>
             <p class="title">Synopsis</p>
             <p>Matsuzaka Satou a longuement eu la réputation d'enchaîner les petits amis jusqu'au jour où elle rencontre l'amour de sa vie, qui n'est autre que l'adorable petite Shio. Depuis, Matsuzaka fait tout pour le bien de leur relation, quitte à recourir à la violence. Mais d'où vient réellement Shio ?</p>
         </div>
