--- a/happy-sugar-life.html
+++ b/happy-sugar-life.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="anime.css">
-    <title>happy sugar life</title>
+    <title>Happy Sugar Life</title>
 </head>
 <body>
     <div class="container">
-        <h2>happy sugar life</h2>
+        <h2>Happy Sugar Life</h2>
         <img src="images_Animes/HAPPY SUGAR LIFE.jpg" alt="Image de l'anime">
         <div class="info-box">
             <div class="rating">
                 7.33/10
             </div>
-            <p>Lien de l'anime : <a href="https://anime-sama.fr/catalogue/happy-sugar-life/">happy sugar life</a></p>
+            <p>Lien de l'anime : <a href="https://anime-sama.fr/catalogue/happy-sugar-life/">Happy Sugar Life</a></p>
             <p>Genres : <span class="genre-info">Drame, Horreur, Mystère, Psychologique, Romance, Shôjo</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">12</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">Terminé</span> <br> Date de diffusion : <span class="date-info">2018</span></p>
