--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       .info-box {
         padding: 10px; /* Réduire le rembourrage */
         max-width: 90%; /* Ajuster la largeur maximale */
+        border-radius: 30 px;
+        border: 5px solid green;
       }
 
       .info-box h2 {
