--- a/index.html
+++ b/index.html
@@ -508,7 +508,10 @@
       <h2>Site de ND</h2>
       <p>Bienvenue, veuillez cliquer sur: </p>
       <ul>
-        <li>l'oeuf violet pour accéder au site de critique d'animes</li>
+        <li>Un oeuf doré -> critique d'animes</li>
+        <li>Un oeuf violet -> </li>
+        <li>Un oeuf orange -> </li>
+        <li>Un oeuf vert -> </li>
       </ul>
 
     </div>
