--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
         font-size: 12px; /* Ajuster la taille de la police */
       }
     }
-
+    .dore {
+      color:gold
+    }
     @keyframes changeBorder {
       0% { border-color: green; }
-      25% { border-color: yellow; }
-      50% { border-color: orange; }
+      25% { border-color: gold; }
+      50% { border-color: orangered; }
       75% { border-color: purple; }
       100% { border-color: green; }
     }
@@ -508,7 +510,7 @@
       <h2>Site de ND</h2>
       <p>Bienvenue, veuillez cliquer sur: </p>
       <ul>
-        <li>Un oeuf doré -> critique d'animes</li>
+        <li>Un oeuf doré -> <a class="dore" href="accueil.html">critique d'animes</a></li>
         <li>Un oeuf violet -> </li>
         <li>Un oeuf orange -> </li>
         <li>Un oeuf vert -> </li>
