--- a/fireworks.html
+++ b/fireworks.html
@@ -30,7 +30,7 @@
             <p class="title">Synopsis</p>
             <p>Un jour, alors qu'un feu d'artifices est prévu, Norimichi, Yusuke et leurs amis à l'école se posent une question qui les divise : les feux d'artifices sont plats ou ronds, quand ils explosent dans le ciel ? Ils se donnent alors rendez-vous le soir pour vérifier qui a raison. Cependant, la jeune Nazuna, une camarade de leur classe a des choses plus importantes en tête, en effet, à cause d'un divorce, elle va devoir déménager et changer d'école pour suivre sa mère. Personne ne le sait encore, mais elle doit partir après les vacances d'été. Aujourd'hui, Norimichi et Yusuke, de corvée de nettoyage de piscine, décident, avec pour arbitre Nazuna, de faire une course sur 50 mètres dans la piscine. Secrètement, elle a décidé d'inviter le gagnant de cette course pour sa dernière soirée avant son déménagement. Qui, de Norimichi et Yusuke, va gagner cette soirée ?</p>
         </div>
-        <p><a href="index.html">Revenir à la page d'accueil</a></p>
+        <p><a href="accueil.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
