--- a/notfound.html
+++ b/notfound.html
@@ -46,7 +46,7 @@
         <h1>Page non trouvée</h1>
         <p>Désolé, la page que vous recherchez n'a pas été trouvée.</p>
         <p class="emoji">😔</p>
-        <p>Retournez à la <a href="index.html">page d'accueil</a>.</p>
+        <p>Retournez à la <a href="accueil.html">page d'accueil</a>.</p>
     </div>
 </body>
 </html>
