--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       .info-box ul {
         font-size: 12px; /* Ajuster la taille de la police */
       }
+      .moving-image {
+        width: 250px;
+        height: 250px;
+      }
     }
     .dore {
       color:gold
