--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
 
 </head>
 <body>
+  <audio autoplay loop>
+    <source src="musique_de_fond.mp3" type="audio/mpeg">
+
+  </audio>
+  
   <div class="background">
 
     <a href="accueil.html">
@@ -509,17 +514,15 @@
 
     <div class="info-box">
       <h2>Site de ND</h2>
-      <p>Bienvenue, veuillez cliquer sur: </p>
+      <p>Bienvenue, où souhaitez-vous aller ? </p>
       <ul>
-        <li>Un oeuf doré -> <a class="dore" href="accueil.html">critique d'animes</a></li>
-        <li>Un oeuf violet -> </li>
-        <li>Un oeuf orange -> </li>
-        <li>Un oeuf vert -> </li>
+        <li><a class="dore" href="accueil.html">critique d'animes</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
 
     </div>
-
-    
   </div>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
