--- a/accueil.html
+++ b/accueil.html
@@ -219,6 +219,7 @@
         </form>
         <div id="errorMessage" class="error-message" style="display: none;">Aucun résultat trouvé pour cet anime.</div>
         <button class="button" onclick="window.location.href='liste_animes.html'">Liste de tous les animes</button>
+        <button class="button" onclick="window.location.href='index.html'">Retourner à la page principale</button>
         <br>
     </div>
     
