--- a/accueil.html
+++ b/accueil.html
@@ -113,7 +113,13 @@
             opacity: 0;
             transition: opacity 0.8s ease;
 
+            
+
         }
+        .autocomplete-items::-webkit-scrollbar {
+    width: 0px; 
+}
+
 
         .autocomplete-items.show {
             opacity: 1;
@@ -219,6 +225,7 @@
         </form>
         <div id="errorMessage" class="error-message" style="display: none;">Aucun résultat trouvé pour cet anime.</div>
         <button class="button" onclick="window.location.href='liste_animes.html'">Liste de tous les animes</button>
+        <button class="button" onclick="goToRandomAnime()">Critique aléatoire</button>
         <button class="button" onclick="window.location.href='index.html'">Retourner à la page principale</button>
         <br>
     </div>
@@ -244,6 +251,12 @@
         "image": "LOVE FLOPS.jpg",
         "rating": "3.25",
         "genre": "Myst\u00e8re, Romance, Ecchi"
+    },
+    {
+        "name": "Orange",
+        "image": "ORANGE.jpg",
+        "rating": "8.6",
+        "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
     },
     {
         "name": "Orange",
@@ -358,6 +371,12 @@
             setTimeout(function() {
                 window.location.href = "pagecachee.html";
             }, 4500);
+        }
+        function goToRandomAnime() {
+            var randomIndex = Math.floor(Math.random() * animeList.length);
+            var randomAnime = animeList[randomIndex];
+            var url = randomAnime.name.toLowerCase().replace(/\s+/g, '-') + ".html";
+            window.location.href = url;
         }       
     </script>
     
