ajout 2eme site

--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
     .dore {
       color:gold
     }
+    .violet {
+      color:violet
+    }
     @keyframes changeBorder {
       0% { border-color: green; }
       25% { border-color: gold; }
       50% { border-color: orangered; }
-      75% { border-color: purple; }
+      75% { border-color: violet; }
       100% { border-color: green; }
     }
   </style>
@@ -191,7 +194,7 @@
     <img src="logo.png" class="moving-image">
     <img src="logo.png" class="moving-image">
     </a>
-    <a href="accueil.html">
+    <a href="accueil2.html">
         <img src="Purple_yoshi_YID.png" class="moving-image">
         <img src="Purple_yoshi_YID.png" class="moving-image">
         <img src="Purple_yoshi_YID.png" class="moving-image">
@@ -517,7 +520,7 @@
       <p>Bienvenue, où souhaitez-vous aller ? </p>
       <ul>
         <li><a class="dore" href="accueil.html">critique d'animes</a></li>
-        <li></li>
+        <li><a class="violet" href="accueil2.html">notes de musiques</a></li>
         <li></li>
         <li></li>
       </ul>
