--- a/index.html
+++ b/index.html
@@ -84,12 +84,15 @@
     .violet {
       color:violet
     }
+    .green {
+      color: #52f552
+    }
     @keyframes changeBorder {
-      0% { border-color: green; }
+      0% { border-color: #52f552; }
       25% { border-color: gold; }
       50% { border-color: orangered; }
       75% { border-color: violet; }
-      100% { border-color: green; }
+      100% { border-color: #52f552; }
     }
   </style>
 
@@ -297,7 +300,7 @@
         <img src="Purple_yoshi_YID.png" class="moving-image">
     </a>
 
-    <a href="accueil.html">
+    <a href="accueil4.html">
         <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
         <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
         <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
@@ -522,7 +525,7 @@
         <li><a class="dore" href="accueil.html">critique d'animes</a></li>
         <li><a class="violet" href="accueil2.html">notes de musiques</a></li>
         <li></li>
-        <li></li>
+        <li><a class="green" href="accueil4.html">jeux développés</a></li>
       </ul>
 
     </div>
