--- a/Snake.html
+++ b/Snake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
+    <link rel="icon" type="image/png" href="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png">
     <style>
         body {
             margin: 0;
