--- a/html_musiques/new-genesis.html
+++ b/html_musiques/new-genesis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemple de Page de Musique</title>
-    <link rel="icon" type="image/png" href="Purple_yoshi_YID.png">
+    <link rel="icon" type="image/png" href="../Purple_yoshi_YID.png">
     <link rel="stylesheet" href="../musique.css">
 </head>
 <body>
